# AgenticStockLaw

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
ai/: .dockerignore  .env.template  Dockerfile  Makefile  __init__.py  config.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  gateway.py  main.py  pyproject.toml  test_brightdata.py  test_openai.py  tmp.py
ai/agents/: __init__.py  base.py
ai/agents/knowledge/: __init__.py  executor.py
ai/agents/orchestrator/: __init__.py  a2a_client.py  executor.py  llm.py  nlu.py  registry.py
ai/agents/regulatory_update/: __init__.py  executor.py
ai/agents/validate/: __init__.py  executor.py
ai/core/: __init__.py  config.py
ai/knowledge/redis/: __init__.py  client.py  memory.py
ai/knowledge/vector_db/: ingest.py  qdrant.py
ai/mcp/: README.md  __init__.py  brightdata.py  client.py  rerank.py  retrieve.py  server.py
ai/routers/: __init__.py  chat.py  debug.py  health.py  session.py
ai/schemas/: __init__.py  chat.py  debug.py
ai/services/: __init__.py  a2a.py  a2a_streaming.py  knowledge.py  llm.py  nlu.py  orchestrator.py  regulatory.py  rerank.py  retrieve.py  trace.py  validation.py  web_content_ingest.py
ai/utils/: __init__.py  api_key_manager.py  upload_documents.py
backend/: .env.example  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  init.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260101_0000_001_initial_roles_users.py  20260117_0618_5862732282cc_add_chat_history_tables.py  20260117_0656_1b3394a3423f_add_chat_history_tables.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  deps.py  security.py
backend/app/crud/: chat_crud.py
backend/app/db/: __init__.py  chat_models.py  minio_client.py  models.py  session.py
backend/app/db/cruds/: __init__.py  base.py  role.py  user.py
backend/app/db/schemas/: __init__.py  base.py  role.py  token.py  user.py
backend/app/logger/: __init__.py  chat_logger.py  custom_logging.py  handlers.py
backend/app/routers/: __init__.py  auth.py  chat.py  knowledge_base.py
backend/app/services/: __init__.py  auth_service.py  document_service.py
data/: clause_chunker.py  document_mapping.json  rename_files.py
docs/: a2a_agents.md  a2a_refactoring.md  ai-gateway.md  bge_m3_onnx_conversion.md  fix_ingestion_env_variable.md  fixing_wsl_script_execution.md  uv_setup_triton_server.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json
frontend/nginx/: default.conf
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/components/common/: DeleteConfirmModal.tsx  index.ts
frontend/src/components/features/: index.ts
frontend/src/components/features/auth/: LoginForm.tsx  RegisterForm.tsx  index.ts
frontend/src/components/features/chat/: ChatInput.tsx  ChatMessage.tsx  ChatView.tsx  index.ts  (+1 more)
frontend/src/components/layout/: index.ts
frontend/src/constants/: app.constants.ts  index.ts  messages.constants.ts
frontend/src/contexts/: AppContext.tsx  AuthContext.tsx  index.ts
frontend/src/data/: index.ts  mock-chat.ts
frontend/src/hooks/: index.ts  use-chats.ts  use-knowledge-base.ts  use-messages.ts
frontend/src/lib/: cn.ts  index.ts  utils.ts
frontend/src/services/: api.ts  auth.service.ts  chat.service.ts  index.ts  knowledge-base.service.ts
frontend/src/types/: auth.types.ts  chat.types.ts  index.ts  knowledge-base.types.ts
nginx/: default.conf
triton_server/: Dockerfile  README.md  convert_onnx_to_tensorrt.py  convert_pytorch_to_onnx.py  docker-compose.yml  fetch_bge_model.py  requirements.txt
(+11 files in other folders)
