[project]
name = "agentic-ai"
version = "0.1.0"
description = "AI services for AgenticStockLaw"
requires-python = ">=3.10"
dependencies = [
    # A2A SDK and Core
    "a2a-sdk[server]>=0.2.0",
    "starlette>=0.27.0",
    "sse-starlette>=1.6.0",
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "openai>=1.0.0",
    "cohere>=5.0.0",
    
    # Vector DB and Embeddings
    "qdrant-client>=1.7.0",
    "tritonclient[grpc]>=2.40.0",
    "transformers>=4.36.0",
    
    # Web/API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    
    # Memory & Text Processing
    "redis>=5.0.0",
    "langchain-text-splitters>=0.3.0",
    
    # Utilities
    "numpy>=1.24.0",
    "grpcio>=1.60.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knowledge", "utils", "agents", "routers", "services", "schemas", "mcp"]
